update producer